@@ -1,60 +1,110 @@
-# JeeSite 企业信息管理系统基础框架
+# JeeSite 企业信息化快速开发平台
 
-## 框架简介
+## 平台简介
 
-JeeSite 是一个 **开源的企业信息管理系统** 基础框架。主要定位于“企业信息管理”领域，可用作企业信息管理类系统、网站后台管理类系统等。JeeSite是非常强调开发的高效性、健壮性和安全性的。
+JeeSite是基于多个优秀的开源项目，高度整合封装而成的高效，高性能，强安全性的**开源**Java EE快速开发平台。
 
-JeeSite 是轻量级的，简单易学，本框架以Spring Framework为核心、Spring MVC作为模型视图控制器、Hibernate作为数据库操作层，此组合是Java界业内最经典、最优的搭配组合。前端界面风格采用了结构简单、性能优良、页面精致的Twitter Bootstrap作为前端展示框架。
+JeeSite本身是以Spring Framework为核心容器，Spring MVC为模型视图控制器，MyBatis为数据访问层，
+Apache Shiro为权限授权层，Ehcahe对常用数据进行缓存，Activit为工作流引擎。
 
-JeeSite 已内置一系列企业信息管理系统的基础功能，目前包括三大模块，系统管理（SYS）模块、内容管理（CMS）模块和在线办公（OA）模块。 **系统管理模块** ，包括企业组织架构（用户管理、机构管理、区域管理）、菜单管理、角色权限管理、字典管理等功能； **内容管理模块** ，包括内容管理（文章、链接），栏目管理、站点管理、公共留言、文件管理、前端网站展示等功能； **在线办公模块** ，提供简单的请假流程实例。
+JeeSite主要定位于企业信息化领域，已内置企业信息化系统的基础功能和高效的**代码生成**工具，
+包括：系统权限组件、数据权限组件、数据字典组件、核心工具组件、视图操作组件、工作流组件、代码生成等。
+前端界面风格采用了结构简单、性能优良、页面美观大气的Twitter Bootstrap页面展示框架。
+采用分层设计、双重验证、提交数据安全编码、密码加密、访问验证、数据权限验证。
+使用Maven做项目管理，提高项目的易开发性、扩展性。
 
-JeeSite 提供了常用工具进行封装，包括日志工具、缓存工具、服务器端验证、数据字典、当前组织机构数据（用户、机构、区域）以及其它常用小工具等。另外还提供一个基于本基础框架的 **代码生成器** ，为你生成基本模块代码，如果你使用了JeeSite基础框架，就可以很快速开发出优秀的信息管理系统。
+JeeSite目前包括以下三大模块，系统管理（SYS）模块、
+内容管理（CMS）模块、在线办公（OA）模块、代码生成（GEN）模块。 **系统管理模块** ，包括企业组织架构（用户管理、机构管理、区域管理）、
+菜单管理、角色权限管理、字典管理等功能； **内容管理模块** ，包括内容管理（文章、链接），栏目管理、站点管理、
+公共留言、文件管理、前端网站展示等功能； **在线办公模块** ，提供简单的请假流程实例。
 
-## 为何选择
+JeeSite 提供了常用工具进行封装，包括日志工具、缓存工具、服务器端验证、数据字典、当前组织机构数据
+（用户、机构、区域）以及其它常用小工具等。另外还提供一个强大的在线 **代码生成** 工具，
+此工具提供简单的单表、一对多、树结构功能的生成，如果对外观要求不是很高，生成的功能就可以用了。
+如果你使用了JeeSite基础框架，就可以很高效的快速开发出，优秀的信息管理系统。
+
+## 内置功能
+
+1.	用户管理：用户是系统操作者，该功能主要完成系统用户配置。
+2.	机构管理：配置系统组织机构（公司、部门、小组），树结构展现，可随意调整上下级。
+3.	区域管理：系统城市区域模型，如：国家、省市、地市、区县的维护。
+4.	菜单管理：配置系统菜单，操作权限，按钮权限标识等。
+5.	角色管理：角色菜单权限分配、设置角色按机构进行数据范围权限划分。
+6.	字典管理：对系统中经常使用的一些较为固定的数据进行维护，如：是否、男女、类别、级别等。
+7.	操作日志：系统正常操作日志记录和查询；系统异常信息日志记录和查询。
+8.	连接池监视：监视当期系统数据库连接池状态，可进行分析SQL找出系统性能瓶颈。
+9.	工作流引擎：实现业务工单流转、在线流程设计器。
+
+##为何使用MyBatis
+
+* 学习成本：Hibernate的真正掌握要比Mybatis来得难不少。Mybatis框架相对简单很容易上手，也更加灵活。
+对于学习过Hibernate的用户，学习起MyBatis也更容易上手。
+
+* 开发成本：大家都说Hibernate开发效率高，个人认为MyBatis的开发效率并不比Hibernate低，
+通过代码生成器和封装开发效率不是问题，并且MyBatis可控性比较高，并更易于维护。
+
+* 性能方面：由于Hibernate比较难以掌握，性能方面也成为了Hibernate的问题瓶颈，当然如果你对Hibernate非常熟，
+Hibernate性能上定不是问题。但对于大多数情况下，真正掌握Hibernate的人少之又少，然而的也就造就了项目风险加大。
+
+* 多数据库支持：有些人说MyBatis对多数据库支持困难，我认为这个不是问题，虽说目前JeeSite仅提供对Oracle
+数据库的支持，但对于支持其它数据库的改动也不是很麻烦，SQL是被专门写在XML中，对于大多数SQL来说都是通用的，
+对于不同的数据库可通过dbName区分和修改各别的SQL片段即可。
+
+上述纯属个人观点，欢迎指正（thinkgem@163.com）。
+
+如果你仍然喜欢Hibernate，请点击[下载Hibernate版本](https://github.com/thinkgem/jeesite/tree/master_hibernate)。
+
+## 为何选择JeeSite
 
 1. 使用 [Apache License 2.0](http://www.apache.org/licenses/LICENSE-2.0) 协议，源代码完全开源，无商业限制。
-2. 使用目前最主流的J2EE开发框架，简单易学，学习成本低。
-3. 数据库无限制，支持MySql、Oracle、SQL Server、H2等数据库。
+2. 使用目前主流的Java EE开发框架，简单易学，学习成本低。
+3. 数据库无限制，支持Oracle、MySql、SQL Server、H2等数据库（目前仅支持Oracle）。
 4. 模块化设计，层次结构清晰。内置一系列企业信息管理的基础功能。
 5. 操作权限控制精密细致，对所有管理链接都进行权限验证，可控制到按钮。
 6. 数据权限控制精密细致，对指定数据集权限进行过滤，七种数据权限可供选择。
-7. 提供基本功能模块的源代码生成器，提高开发效率及质量。
+7. 提供在线功能代码生成工具，提高开发效率及质量。
 8. 提供常用工具类封装，日志、缓存、验证、字典、组织机构等，常用标签（taglib），获取当前组织机构、字典等数据。
-9. 完全兼容目前最流行浏览器（IE6、IE7+、Firefox、Chrome）。
-10. 提供目前最流行的Activit流程引擎实例。
+9. 兼容目前最流行浏览器（IE7+、Chrome、Firefox）IE6也支持，但体验效果差。
 
 ## 技术选型
 
-1、Services相关
+1、后端
 
-* Core Framework：Spring Framework 3.2。
-* Security Framework：Apache Shiro 1.2。
-* Workflow Engine：Activit 5.14。
+* 核心框架：Spring Framework 4.0
+* 安全框架：Apache Shiro 1.2
+* 视图框架：Spring MVC 4.0
+* 服务端验证：Hibernate Validator 5.1
+* 布局框架：SiteMesh 2.4
+* 工作流引擎：Activiti 5.15、FoxBPM 6
+* 任务调度：Spring Task 4.0
+* 持久层框架：MyBatis 3.2
+* 数据库连接池：Alibaba Druid 1.0
+* 缓存框架：Ehcache 2.6、Redis
+* 日志管理：SLF4J 1.7、Log4j
+* 工具类：Apache Commons、Jackson 2.2、Xstream 1.4、Dozer 5.3、POI 3.9
 
-2、Web相关
+2、前端
 
-* MVC Framework：SpringMVC 3.2。
-* Layout Decoration：SiteMesh 2.4。
-* JavaScript Library：JQuery 1.9。
-* CSS Framework：Twitter Bootstrap 2.3.1。
-* JavaScript/CSS Compressor：YUI Compressor 2.4。
-* Front Validation：JQuery Validation Plugin 1.11。
+* JS框架：jQuery 1.9。
+* CSS框架：Twitter Bootstrap 2.3.1。
+* 客户端验证：JQuery Validation Plugin 1.11。
+* 富文本：CKEcitor
+* 文件管理：CKFinder
+* 动态页签：Jerichotab
+* 手机端框架：Jingle
+* 数据表格：jqGrid
+* 对话框：jQuery jBox
+* 下拉选择框：jQuery Select2
+* 树结构控件：jQuery zTree
+* 日期控件： My97DatePicker
 
-3、Database相关
+4、平台
 
-* ORM Framework：Hibernate 4.1 + MyBatis 3.1。
-* Connection Pool：Alibaba Druid 1.0。
-* Bean Validation：Hibernate Validation 5.0。
-* Cache：Ehcache 2.6。
-
-4、Tools 相关
-
-* Commons：Apache Commons
-* JSON Mapper：Jackson 2.1
-* Bean Mapper：Dozer 5.3
-* Office Tools: Apache POI 3.9
-* Full-text search：Hibernate Search 4.2（Apache Lucene 3.6）、IK Analyzer 2012_u6中文分词
-* Log Manager：Log4j 1.2
+* 服务器中间件：在Java EE 5规范（Servlet 2.5、JSP 2.1）下开发，支持应用服务器中间件
+有Tomcat 6、Jboss 7、WebLogic 10、WebSphere 8。
+* 数据库支持：目前仅提供Oracle数据库的支持，但不限于数据库，平台留有其它数据库支持接口，
+可方便更改为其它数据库，如：SqlServer 2008、MySql 5.5、H2等
+* 开发环境：Java EE、Eclipse、Maven、Git
 
 ## 安全考虑
 
@@ -67,28 +117,35 @@ JeeSite 提供了常用工具进行封装，包括日志工具、缓存工具、
 
 ## 快速体验
 
-1. 具备运行环境：JDK1.6、Maven3.0、MySql5。
+1. 具备运行环境：JDK1.6+、Maven3.0+、Oracle10g+。
 2. 修改src\main\resources\jeesite.properties文件中的数据库设置参数。
-3. 根据修改参数创建对应MySql数据库（数据库编码：UTF-8）。
-4. 运行bin\resresh-db\refresh-db.bat脚本，即可导入表结构及演示数据(linux操作系统：在控制台中切换至项目根目录，运行命令：mvn antrun:run -Prefresh-db)
-5. 运行bin\run-jetty.bat，启动Web服务器（第一次运行，需要下载依赖jar包，请耐心等待）。
+3. 根据修改参数创建对应Oracle数据库用户。
+4. 运行bin\init-db.bat脚本，即可导入表结构及演示数据(linux操作系统：在控制台中切换至项目根目录，运行命令：mvn antrun:run -Pinit-db)
+5. 运行bin\run-tomcat7.bat或bin\run-jetty.bat，启动Web服务器（第一次运行，需要下载依赖jar包，请耐心等待）。
 6. 最高管理员账号，用户名：thinkgem 密码：admin
+
+## 常见问题
+
+1. 有时出现文字乱码：修改Tomcat的server.xml文件的Connector项，增加URIEncoding="UTF-8"
+2. 用一段时间提示内存溢出，请修改JVM参数：-Xmx512m -XX:MaxPermSize=256m
+3. 为什么新建菜单后看不到新建的菜单？因为授权问题，菜单管理只允许最高管理员账号管理（最高管理员默认账号：thinkgem 密码：admin）。
 
 ## 更多文档
 
-* [JeeSite介绍演示.docx](https://github.com/thinkgem/jeesite/raw/master/doc/JeeSite About.docx)
-* [JeeSite开发手册.docx](https://github.com/thinkgem/jeesite/raw/master/doc/JeeSite Developer.docx)
+* <https://github.com/thinkgem/jeesite/tree/master/doc>
 
 ## 如何交流、反馈、参与贡献？
 
-* QQ Group：127515876   209330483(已满)
-* E-mail：<mailto:thinkgem@163.com>
-* Github：<https://github.com/thinkgem/jeesite>
+* QQ Group：127515876 &nbsp; 209330483 &nbsp; 223507718
+* E-mail：thinkgem@163.com
+* GitHub：<https://github.com/thinkgem/jeesite>
 * 开源中国：<http://git.oschina.net/thinkgem/jeesite>
 * 官方网址：<http://jeesite.com>  论坛：<http://bbs.jeesite.com>
-* 支持JeeSite：<http://jeesite.com/donation.html>
+* 捐赠支持JeeSite（支付宝）：thinkgem@163.com
 
-如果你想参与进来共同完善它或有更好的建议，请联系我吧(^_^)。
+一个人的个人能力再强，也无法战胜一个团队，希望兄弟姐妹的支持，能够贡献出自己的部分代码，参与进来共同完善它(^_^)。
+
+怎么共享我的代码：[手把手教你如何加入到github的开源世界！](http://www.cnblogs.com/wenber/p/3630921.html)
 
 ## 版权声明
 
